--- a/index.html
+++ b/index.html
@@ -8,9 +8,35 @@
     <title>Merlin's Beard!</title>
 </head>
 <body>
-    <section><h1>Merlin's Beard!</h1></section>
-    <section>Explanation of the quiz</section>
-    <section>The quiz itself</section>
-    <section>Feedback scores</section>
+    <section class="memory-game">
+        <div class="memory-card">
+            <img class="front-face" src="assets/images/alohomora.jpg" alt="alohomora"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="front-face" src="assets/images/alohomora.jpg" alt="alohomora"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="front-face" src="assets/images/ascendio.jpg" alt="ascendio"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="front-face" src="assets/images/ascendio.jpg" alt="ascendio"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="front-face" src="assets/images/expelliarmus.jpg" alt="expelliarmus"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="front-face" src="assets/images/expelliarmus.jpg" alt="expelliarmus"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="front-face" src="assets/images/locomotor.jpg" alt="locomotor"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="front-face" src="assets/images/locomotor.jpg" alt="locomotor"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="front-face" src="assets/images/silencio.jpg" alt="silencio"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="front-face" src="assets/images/silencio.jpg" alt="silencio"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="front-face" src="assets/images/stupify.jpg" alt="stupify"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="front-face" src="assets/images/stupify.jpg" alt="stupify"/>
+            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+        </div>
+    </section>
+    
+    <script src="script.js"></script>
 </body>
 </html>
