--- a/index.html
+++ b/index.html
@@ -11,29 +11,51 @@
     <section class="memory-game">
         <div class="memory-card">
             <img class="front-face" src="assets/images/alohomora.jpg" alt="alohomora"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="assets/images/alohomora.jpg" alt="alohomora"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="assets/images/ascendio.jpg" alt="ascendio"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="assets/images/ascendio.jpg" alt="ascendio"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="assets/images/expelliarmus.jpg" alt="expelliarmus"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="assets/images/expelliarmus.jpg" alt="expelliarmus"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="assets/images/locomotor.jpg" alt="locomotor"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="assets/images/locomotor.jpg" alt="locomotor"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="assets/images/silencio.jpg" alt="silencio"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="assets/images/silencio.jpg" alt="silencio"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="assets/images/stupify.jpg" alt="stupify"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
+        </div>
+        <div class="memory-card">
             <img class="front-face" src="assets/images/stupify.jpg" alt="stupify"/>
-            <img class="back-face" src="assets/images/back-face2.jpg" alt="backface"/>
+            <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
     </section>
     
