--- a/index.html
+++ b/index.html
@@ -9,51 +9,51 @@
 </head>
 <body>
     <section class="memory-game">
-        <div class="memory-card">
+        <div class="memory-card" data-framework="alohomora">
             <img class="front-face" src="assets/images/alohomora.jpg" alt="alohomora"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="alohomora">
             <img class="front-face" src="assets/images/alohomora.jpg" alt="alohomora"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="ascendio">
             <img class="front-face" src="assets/images/ascendio.jpg" alt="ascendio"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="ascendio">
             <img class="front-face" src="assets/images/ascendio.jpg" alt="ascendio"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="expelliarmus">
             <img class="front-face" src="assets/images/expelliarmus.jpg" alt="expelliarmus"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="expelliarmus">
             <img class="front-face" src="assets/images/expelliarmus.jpg" alt="expelliarmus"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="locomotor">
             <img class="front-face" src="assets/images/locomotor.jpg" alt="locomotor"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="locomotor>
             <img class="front-face" src="assets/images/locomotor.jpg" alt="locomotor"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="silencio">
             <img class="front-face" src="assets/images/silencio.jpg" alt="silencio"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="silencio">
             <img class="front-face" src="assets/images/silencio.jpg" alt="silencio"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="stupify">
             <img class="front-face" src="assets/images/stupify.jpg" alt="stupify"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card">
+        <div class="memory-card" data-framework="stupify">
             <img class="front-face" src="assets/images/stupify.jpg" alt="stupify"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
