Added script for matching cards

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img class="front-face" src="assets/images/locomotor.jpg" alt="locomotor"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
-        <div class="memory-card" data-framework="locomotor>
+        <div class="memory-card" data-framework="locomotor">
             <img class="front-face" src="assets/images/locomotor.jpg" alt="locomotor"/>
             <img class="back-face" src="assets/images/back-face3.jpg" alt="backface"/>
         </div>
